--- a/app/build.gradle
+++ b/app/build.gradle
@@ -224,6 +224,12 @@ android {
     }
 
     packagingOptions {
+        resources {
+            excludes += "META-INF/LICENSE.md"
+            excludes += "META-INF/LICENSE-notice.md"
+            excludes += "META-INF/AL2.0"
+            excludes += "META-INF/LGPL2.1"
+        }
         jniLibs {
             keepDebugSymbols += ['**/*.so']
         }
